feat: vin ui icon

--- a/apps/vin-ui/index.html
+++ b/apps/vin-ui/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />    
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>VIN UI</title>
+    <title>VIN UI</title>    
+    <link rel="icon" href="bmw.svg">
+
   </head>
   <body>
     <div id="root"></div>
